--- a/Scss/components/_footer.scss
+++ b/Scss/components/_footer.scss
@@ -1,30 +1,34 @@
+@use "../base/variables" as *;
+@use "../base/mixins" as *;
+
 /* ========== FOOTER ========== */
 footer {
-    background: #353535;
-    color: #FAFAFA;
-    font-family: "Public Sans", sans-serif;
+    background: $color-bg-dark;
+    color: $color-text-light;
+    font-family: $ff-base;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 36px 0;
-    gap: 16px;
+    @include section-padding($space-36, 0);
+    gap: $space-16;
     text-align: center;
-    border-top: 4px solid #FAFAFA;
+    border-top: $border-w solid $color-text-light;
 
     .social-icons {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 20px;
+        gap: $space-16;
         flex-wrap: wrap;
-        margin-bottom: 20px;
+        margin-bottom: $space-16;
 
         a {
             display: inline-flex;
-            width: 36px;
-            height: 36px;
-            border-radius: 6px;
-            transition: transform .15s ease, filter .15s ease;
+            width: $space-36;
+            height: $space-36;
+            border-radius: $space-6;
+            @include smooth(transform, .15s, ease);
+            @include smooth(filter, .15s, ease);
 
             img {
                 width: 100%;
@@ -38,7 +42,7 @@ footer {
             }
 
             &:focus-visible {
-                outline: 2px solid #FAFAFA;
+                outline: 2px solid $color-text-light;
             }
         }
     }
